0.6: 1/27/2012
	* Added format string specifier for supporting different github output in the future.

0.5: 1/27/2012
	* Added ordering of file results so errors and failures show up first.

0.4: 1/26/2012
	* Trying to get the plugin-help.xml to publish correctly.

0.3: 1/24/2012
	* Added method finding, renamed config options, improved logging.

0.2: 1/24/2021
	* Fixed a bug in the plugin mojo annotation.

0.1: 1/23/2021
	* Initial release which seems to be working.  Only supports surefire and is a bit brittle.